--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,21 +12,15 @@ jobs:
 
     services:
       postgres:
-        image: postgres:12
-        env:
-          POSTGRES_PASSWORD: postgres
+        image: postgres:12.1-alpine
         ports: ['5432:5432']
-
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
       - uses: actions/checkout@v2
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1.80.0
         with:
           ruby-version: 2.7.2
-
-      - uses: Borales/actions-yarn@v2.3.0
-        with:
-          cmd: install
 
       - name: Install Dependencies
         run: |
@@ -39,24 +33,17 @@ jobs:
 
       - name: Setup database
         env:
-          PG_DATABASE: postgres
-          PG_HOST: localhost
-          PG_USER: postgres
-          PG_PASSWORD: password
           RAILS_ENV: test
-          WITH_COVERAGE: true
           DISABLE_SPRING: 1
+          DATABASE_URL: "postgres://postgres@localhost:5432/github_search_test"
         run: |
-          bundle exec rails db:prepare
-          bundle exec rake test
+          bundle exec bin/rails db:test:prepare
 
       - name: Build and test with rspec
         env:
-          PG_DATABASE: postgres
-          PG_HOST: localhost
-          PG_USER: postgres
-          PG_PASSWORD: password
           RAILS_ENV: test
+          WITH_COVERAGE: true
+          DATABASE_URL: "postgres://postgres@localhost:5432/github_search_test"
         run: |
           bundle exec rspec spec
 
